--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   --accent:#22c55e;--text:#e5e7eb;
 }
 body{margin:0;font-family:system-ui;background:var(--bg);color:var(--text)}
-header{padding:10px;display:flex;gap:8px;background:#020617;border-bottom:1px solid #1e293b}
+header{padding:10px;display:flex;gap:8px;background:#020617;border-bottom:1px solid #1e293b;align-items:center}
 button{background:var(--accent);border:none;padding:8px 12px;border-radius:8px;font-weight:600;cursor:pointer}
 .container{display:flex;height:calc(100vh - 120px)}
 .panel{flex:1}
@@ -23,7 +23,7 @@ textarea,pre{
   width:100%;height:100%;background:var(--editor);
   color:var(--text);border:none;padding:10px;font-size:14px
 }
-pre{overflow:auto}
+pre{overflow:auto;white-space:pre-wrap}
 @media(max-width:768px){.container{flex-direction:column}}
 
 #login{
@@ -33,7 +33,7 @@ pre{overflow:auto}
   background:var(--panel);padding:24px;border-radius:12px;
   width:300px;display:flex;flex-direction:column;gap:12px
 }
-.login-card input{
+.login-card input, .login-card select{
   padding:10px;border-radius:8px;border:1px solid #334155;
   background:#020617;color:var(--text)
 }
@@ -47,6 +47,12 @@ pre{overflow:auto}
     <h2>Login</h2>
     <input id="email" placeholder="Email">
     <input id="password" type="password" placeholder="Password">
+    <label for="modelSelect">Choose AI model:</label>
+    <select id="modelSelect">
+      <option value="arcee-ai/trinity-large-preview:free" selected>Arcee-AI (Primary)</option>
+      <option value="meta-llama/llama-3.2-3b-instruct:free">Meta LLaMA 3.2</option>
+      <option value="deepseek/deepseek-r1-0528:free">DeepSeek R1</option>
+    </select>
     <button id="loginBtn">Login</button>
     <small id="loginErr" style="color:#ef4444"></small>
   </div>
@@ -58,6 +64,9 @@ pre{overflow:auto}
     <span>🐍 PythonC AI Compiler</span>
     <button onclick="run()">▶ Run</button>
     <button onclick="clearOut()">🧹 Clear</button>
+    <span style="margin-left:auto;">
+      Model: <span id="currentModel"></span>
+    </span>
   </header>
   <div class="container" style="flex:1">
     <div class="panel">
@@ -78,9 +87,16 @@ const loginErr = document.getElementById("loginErr");
 const loginBtn = document.getElementById("loginBtn");
 const codeEl = document.getElementById("code");
 const out = document.getElementById("output");
+const modelSelect = document.getElementById("modelSelect");
+const currentModel = document.getElementById("currentModel");
+
+let selectedModel = modelSelect.value;
 
 // LOGIN
 loginBtn.onclick = () => {
+  selectedModel = modelSelect.value;
+  currentModel.textContent = selectedModel;
+
   fetch("/api/api+login",{
     method:"POST",
     headers:{"Content-Type":"application/json"},
@@ -107,59 +123,39 @@ function clearOut(){ out.textContent=""; }
 
 function run(){
   out.textContent="";
-  Sk.configure({output:outf,read:x=>Sk.builtinFiles.files[x]});
+  Sk.configure({output:outf,read:builtinRead});
   Sk.misceval.asyncToPromise(
-    ()=>Sk.importMainWithBody("<stdin>",false,codeEl.value,true)
+    ()=>Sk.importMainWithBody("<stdin>", false, codeEl.value, true)
   ).catch(e=>handleError(e.toString()));
+}
+
+function builtinRead(x){
+  if(Sk.builtinFiles===undefined||Sk.builtinFiles.files[x]===undefined)
+    throw `File not found: '${x}'`;
+  return Sk.builtinFiles.files[x];
 }
 
 // HANDLE AI ERROR
 async function handleError(err){
   out.textContent = err + "\n\n";
-  const r = await fetch("/api/api+login",{
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({
-      error: err,
-      code: codeEl.value  // send full code so backend can extract context lines
-    })
-  });
-  const d = await r.json();
-  if(d.fix) out.textContent += d.fix;
-}
-</script>
 
-</body>
-</html>function run(){
-  out.textContent="";
-  Sk.configure({output:outf,read:x=>Sk.builtinFiles.files[x]});
-  Sk.misceval.asyncToPromise(
-    ()=>Sk.importMainWithBody("<stdin>",false,codeEl.value,true)
-  ).catch(e=>handleError(e.toString()));
-}
+  try{
+    const r = await fetch("/api/api+login",{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({
+        error: err,
+        code: codeEl.value,
+        model: selectedModel   // send selected AI model
+      })
+    });
 
-// HANDLE AI ERROR
-async function handleError(err){
-  out.textContent=err+"\n\n";
-  const r = await fetch("/api/api+login",{
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    async function handleError(err){
-  out.textContent = err + "\n\n";
-  const r = await fetch("/api/api+login", {
-    method: "POST",
-    headers: {"Content-Type": "application/json"},
-    body: JSON.stringify({
-      error: err,
-      code: codeEl.value  // send full code so backend can see surrounding lines
-    })
-  });
-  const d = await r.json();
-  if(d.fix) out.textContent += d.fix;
-}
-  });
-  const d = await r.json();
-  if(d.fix) out.textContent+=d.fix;
+    if(!r.ok) throw new Error("Server error");
+    const d = await r.json();
+    if(d.fix) out.textContent += d.fix;
+  }catch(e){
+    out.textContent += "\nError: Could not contact AI service.\nFix: Try again later.";
+  }
 }
 </script>
 
